<resources>
    <string name="app_name">E-COMMERCE-APP</string>
    <string name="cart_name">Cart</string>
    <string name="cartegorie_name">Categorie</string>
    <string name="about_name">About Us</string>
    <string name="license_name">License</string>
    <string name="terms_name">Terms</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>