<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/cart"
            android:icon="@drawable/ic_cart"
           android:title="@string/cart_name"
            />
        <item
            android:id="@+id/categorie"
            android:icon="@drawable/ic_categorie"
            android:title="@string/cartegorie_name"
            />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_name"
            />
        <item
            android:id="@+id/terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_name"
            />
        <item
            android:id="@+id/license"
            android:icon="@drawable/ic_license"
            android:title="@string/license_name"
            />

</menu>